--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'d:\\\\Repositories\\\\ml-churn\\\\research'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\Repositories\\\\ml-churn'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,67 +199,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-12-15 23:58:55,187: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-12-15 23:58:55,190: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-12-15 23:58:55,192: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-12-15 23:58:55,194: INFO: common: created directory at: artifacts]\n",
-      "[2023-12-15 23:58:55,195: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2023-12-15 23:58:55,373: INFO: 3751051550: Transformed and splitted data, stratification of train data Ordinal__gender                        0.503058\n",
-      "Ordinal__SeniorCitizen                 0.256116\n",
-      "Ordinal__Partner                       0.361621\n",
-      "Ordinal__Dependents                    0.167431\n",
-      "Ordinal__Churn                         1.000000\n",
-      "Standard__tenure                      -0.579689\n",
-      "Standard__MonthlyCharges               0.335271\n",
-      "Standard__TotalCharges                -0.318485\n",
-      "Onehot__InternetService_DSL            0.246177\n",
-      "Onehot__InternetService_Fiber optic    0.697248\n",
-      "Onehot__InternetService_No             0.056575\n",
-      "Onehot__OnlineSecurity_No              0.785168\n",
-      "Onehot__OnlineSecurity_Yes             0.158257\n",
-      "Onehot__OnlineBackup_No                0.659786\n",
-      "Onehot__OnlineBackup_Yes               0.283639\n",
-      "Onehot__DeviceProtection_No            0.645260\n",
-      "Onehot__DeviceProtection_Yes           0.298165\n",
-      "Onehot__TechSupport_No                 0.775229\n",
-      "Onehot__TechSupport_Yes                0.168196\n",
-      "Onehot__StreamingTV_No                 0.495413\n",
-      "Onehot__StreamingTV_Yes                0.448012\n",
-      "Onehot__StreamingMovies_No             0.500765\n",
-      "Onehot__StreamingMovies_Yes            0.442661\n",
-      "dtype: float64 stratification of test data Ordinal__gender                        0.484848\n",
-      "Ordinal__SeniorCitizen                 0.251337\n",
-      "Ordinal__Partner                       0.349376\n",
-      "Ordinal__Dependents                    0.190731\n",
-      "Ordinal__Churn                         1.000000\n",
-      "Standard__tenure                      -0.608881\n",
-      "Standard__MonthlyCharges               0.286200\n",
-      "Standard__TotalCharges                -0.362027\n",
-      "Onehot__InternetService_DSL            0.244207\n",
-      "Onehot__InternetService_Fiber optic    0.686275\n",
-      "Onehot__InternetService_No             0.069519\n",
-      "Onehot__OnlineSecurity_No              0.773619\n",
-      "Onehot__OnlineSecurity_Yes             0.156863\n",
-      "Onehot__OnlineBackup_No                0.659537\n",
-      "Onehot__OnlineBackup_Yes               0.270945\n",
-      "Onehot__DeviceProtection_No            0.654189\n",
-      "Onehot__DeviceProtection_Yes           0.276292\n",
-      "Onehot__TechSupport_No                 0.770053\n",
-      "Onehot__TechSupport_Yes                0.160428\n",
-      "Onehot__StreamingTV_No                 0.524064\n",
-      "Onehot__StreamingTV_Yes                0.406417\n",
-      "Onehot__StreamingMovies_No             0.504456\n",
-      "Onehot__StreamingMovies_Yes            0.426025\n",
+      "[2023-12-16 12:59:49,157: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-12-16 12:59:49,160: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-12-16 12:59:49,168: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-12-16 12:59:49,169: INFO: common: created directory at: artifacts]\n",
+      "[2023-12-16 12:59:49,170: INFO: common: created directory at: artifacts/data_transformation]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-12-16 12:59:49,423: INFO: 1438513477: Transformed and splitted data, stratification of train data Ordinal__gender                                    0.503058\n",
+      "Ordinal__SeniorCitizen                             0.256116\n",
+      "Ordinal__Partner                                   0.361621\n",
+      "Ordinal__Dependents                                0.167431\n",
+      "Ordinal__Churn                                     1.000000\n",
+      "Standard__tenure                                  -0.579689\n",
+      "Standard__MonthlyCharges                           0.335271\n",
+      "Standard__TotalCharges                            -0.318485\n",
+      "Onehot__PhoneService_No                            0.091743\n",
+      "Onehot__PhoneService_Yes                           0.908257\n",
+      "Onehot__MultipleLines_No                           0.442661\n",
+      "Onehot__MultipleLines_No phone service             0.091743\n",
+      "Onehot__MultipleLines_Yes                          0.465596\n",
+      "Onehot__InternetService_DSL                        0.246177\n",
+      "Onehot__InternetService_Fiber optic                0.697248\n",
+      "Onehot__InternetService_No                         0.056575\n",
+      "Onehot__OnlineSecurity_No                          0.785168\n",
+      "Onehot__OnlineSecurity_Yes                         0.158257\n",
+      "Onehot__OnlineBackup_No                            0.659786\n",
+      "Onehot__OnlineBackup_Yes                           0.283639\n",
+      "Onehot__DeviceProtection_No                        0.645260\n",
+      "Onehot__DeviceProtection_Yes                       0.298165\n",
+      "Onehot__TechSupport_No                             0.775229\n",
+      "Onehot__TechSupport_Yes                            0.168196\n",
+      "Onehot__StreamingTV_No                             0.495413\n",
+      "Onehot__StreamingTV_Yes                            0.448012\n",
+      "Onehot__StreamingMovies_No                         0.500765\n",
+      "Onehot__StreamingMovies_Yes                        0.442661\n",
+      "Onehot__Contract_Month-to-month                    0.886086\n",
+      "Onehot__Contract_One year                          0.085627\n",
+      "Onehot__Contract_Two year                          0.028287\n",
+      "Onehot__PaperlessBilling_No                        0.246942\n",
+      "Onehot__PaperlessBilling_Yes                       0.753058\n",
+      "Onehot__PaymentMethod_Bank transfer (automatic)    0.131498\n",
+      "Onehot__PaymentMethod_Credit card (automatic)      0.125382\n",
+      "Onehot__PaymentMethod_Electronic check             0.577982\n",
+      "Onehot__PaymentMethod_Mailed check                 0.165138\n",
+      "dtype: float64 stratification of test data Ordinal__gender                                    0.484848\n",
+      "Ordinal__SeniorCitizen                             0.251337\n",
+      "Ordinal__Partner                                   0.349376\n",
+      "Ordinal__Dependents                                0.190731\n",
+      "Ordinal__Churn                                     1.000000\n",
+      "Standard__tenure                                  -0.608881\n",
+      "Standard__MonthlyCharges                           0.286200\n",
+      "Standard__TotalCharges                            -0.362027\n",
+      "Onehot__PhoneService_No                            0.089127\n",
+      "Onehot__PhoneService_Yes                           0.910873\n",
+      "Onehot__MultipleLines_No                           0.481283\n",
+      "Onehot__MultipleLines_No phone service             0.089127\n",
+      "Onehot__MultipleLines_Yes                          0.429590\n",
+      "Onehot__InternetService_DSL                        0.244207\n",
+      "Onehot__InternetService_Fiber optic                0.686275\n",
+      "Onehot__InternetService_No                         0.069519\n",
+      "Onehot__OnlineSecurity_No                          0.773619\n",
+      "Onehot__OnlineSecurity_Yes                         0.156863\n",
+      "Onehot__OnlineBackup_No                            0.659537\n",
+      "Onehot__OnlineBackup_Yes                           0.270945\n",
+      "Onehot__DeviceProtection_No                        0.654189\n",
+      "Onehot__DeviceProtection_Yes                       0.276292\n",
+      "Onehot__TechSupport_No                             0.770053\n",
+      "Onehot__TechSupport_Yes                            0.160428\n",
+      "Onehot__StreamingTV_No                             0.524064\n",
+      "Onehot__StreamingTV_Yes                            0.406417\n",
+      "Onehot__StreamingMovies_No                         0.504456\n",
+      "Onehot__StreamingMovies_Yes                        0.426025\n",
+      "Onehot__Contract_Month-to-month                    0.884135\n",
+      "Onehot__Contract_One year                          0.096257\n",
+      "Onehot__Contract_Two year                          0.019608\n",
+      "Onehot__PaperlessBilling_No                        0.260250\n",
+      "Onehot__PaperlessBilling_Yes                       0.739750\n",
+      "Onehot__PaymentMethod_Bank transfer (automatic)    0.153298\n",
+      "Onehot__PaymentMethod_Credit card (automatic)      0.121212\n",
+      "Onehot__PaymentMethod_Electronic check             0.561497\n",
+      "Onehot__PaymentMethod_Mailed check                 0.163993\n",
       "dtype: float64]\n",
-      "[2023-12-15 23:58:55,374: INFO: 3751051550: (4922, 23)]\n",
-      "[2023-12-15 23:58:55,375: INFO: 3751051550: (2110, 23)]\n"
+      "[2023-12-16 12:59:49,424: INFO: 1438513477: (4922, 37)]\n",
+      "[2023-12-16 12:59:49,424: INFO: 1438513477: (2110, 37)]\n"
      ]
     }
    ],
