--- a/research/Model_churn_analysis.ipynb
+++ b/research/Model_churn_analysis.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,40 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Encoded_df = pd.DataFrame(Encoded_data , columns= preprocessor.get_feature_names_out())"
+    "Encoded_df = pd.DataFrame(Encoded_data , columns= input_encoder.get_feature_names_out())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "InternetService\n",
-       "Fiber optic    3096\n",
-       "DSL            2416\n",
-       "No             1520\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_df[\"InternetService\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +217,26 @@
     "Encoded_df.drop(columns= \"Onehot__TechSupport_No internet service\", inplace= True)\n",
     "Encoded_df.drop(columns= \"Onehot__StreamingTV_No internet service\", inplace= True)\n",
     "Encoded_df.drop(columns= \"Onehot__StreamingMovies_No internet service\", inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7032, 37)"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Encoded_df.shape"
    ]
   },
   {
@@ -847,6 +843,47 @@
     "X1000 = shap.utils.sample(X_train, 1000)\n",
     "explainer = shap.Explainer(grid_search.best_estimator_.predict, X1000)\n",
     "shap_values = explainer(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ".values =\n",
+       "array([ 0.0075    , -0.01166667, -0.00166667,  0.005     , -0.2025    ,\n",
+       "        0.0225    , -0.1925    ,  0.        , -0.00083333, -0.06166667,\n",
+       "       -0.0025    , -0.00166667,  0.00416667,  0.05583333,  0.00416667,\n",
+       "        0.0375    ,  0.00083333, -0.01333333, -0.00333333,  0.00333333,\n",
+       "       -0.00083333,  0.03916667,  0.005     ,  0.00166667,  0.01583333,\n",
+       "       -0.00083333, -0.0125    ,  0.005     ,  0.        ,  0.00666667,\n",
+       "        0.01083333,  0.00583333,  0.00583333, -0.00166667, -0.05916667,\n",
+       "        0.        ])\n",
+       "\n",
+       ".base_values =\n",
+       "0.33\n",
+       "\n",
+       ".data =\n",
+       "array([1.        , 0.        , 1.        , 0.        , 0.6754621 ,\n",
+       "       0.68148865, 0.88883813, 0.        , 1.        , 1.        ,\n",
+       "       0.        , 0.        , 0.        , 1.        , 0.        ,\n",
+       "       1.        , 0.        , 0.        , 1.        , 1.        ,\n",
+       "       0.        , 1.        , 0.        , 0.        , 1.        ,\n",
+       "       1.        , 0.        , 1.        , 0.        , 0.        ,\n",
+       "       0.        , 1.        , 0.        , 1.        , 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap_values[80]"
    ]
   },
   {
