--- a/research/07_app.ipynb
+++ b/research/07_app.ipynb
@@ -337,6 +337,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "explainer = joblib.load(\"research/SHAP/shap_explainer\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = {\n",
+    "  \"customerID\": \"1\",\n",
+    "  \"gender\": \"Male\",\n",
+    "  \"SeniorCitizen\": \"Yes\",\n",
+    "  \"Partner\": \"No\",\n",
+    "  \"Dependents\": \"No\",\n",
+    "  \"tenure\": 20,\n",
+    "  \"PhoneService\": \"Yes\",\n",
+    "  \"MultipleLines\": \"Yes\",\n",
+    "  \"InternetService\": \"DSL\",\n",
+    "  \"OnlineSecurity\": \"Yes\",\n",
+    "  \"OnlineBackup\": \"No\",\n",
+    "  \"DeviceProtection\": \"No\",\n",
+    "  \"TechSupport\": \"No\",\n",
+    "  \"StreamingTV\": \"Yes\",\n",
+    "  \"StreamingMovies\": \"Yes\",\n",
+    "  \"Contract\": \"Month-to-month\",\n",
+    "  \"PaperlessBilling\": \"Yes\",\n",
+    "  \"PaymentMethod\": \"Mailed check\",\n",
+    "  \"MonthlyCharges\": 204,\n",
+    "  \"TotalCharges\": 804,\n",
+    "  \"Churn\": \"Yes\"\n",
+    "}\n",
+    "\n",
+    "data_df = pd.DataFrame([var])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_encoder = joblib.load(\"artifacts/data_transformation/transformation.pkl\")\n",
+    "\n",
+    "Encoded_data = input_encoder.transform(data_df.drop(columns=[\"customerID\"]))\n",
+    "Encoded_df = pd.DataFrame(Encoded_data , columns= input_encoder.get_feature_names_out())\n",
+    "\n",
+    "Encoded_df.drop(columns= [\"Onehot__OnlineSecurity_No internet service\",\n",
+    "                            \"Onehot__OnlineBackup_No internet service\",\n",
+    "                            \"Onehot__DeviceProtection_No internet service\",\n",
+    "                            \"Onehot__TechSupport_No internet service\",\n",
+    "                            \"Onehot__StreamingTV_No internet service\",\n",
+    "                            \"Onehot__StreamingMovies_No internet service\",\n",
+    "                            \"Ordinal__Churn\"], inplace= True)\n",
+    "\n",
+    "shap_values = explainer(Encoded_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  1.        ,  0.        ,  0.        , -0.50611277,\n",
+       "        4.62712928, -0.65264881,  0.        ,  1.        ,  0.        ,\n",
+       "        0.        ,  1.        ,  1.        ,  0.        ,  0.        ,\n",
+       "        0.        ,  1.        ,  1.        ,  0.        ,  1.        ,\n",
+       "        0.        ,  1.        ,  0.        ,  0.        ,  1.        ,\n",
+       "        0.        ,  1.        ,  1.        ,  0.        ,  0.        ,\n",
+       "        0.        ,  1.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        1.        ])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap_values.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
