--- a/research/06_model_evaluation.ipynb
+++ b/research/06_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'d:\\\\Repositories\\\\ml-churn\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,8 @@
     "\n",
     "\n",
     "\n",
-    "        with mlflow.start_run():\n",
+    "        with mlflow.start_run() as run:\n",
+    "            run_id = run.info.run_uuid\n",
     "\n",
     "            scores = calculate_metrics(conf_matrix)\n",
     "            save_json(path= Path(os.path.join(self.config.root_dir,\"scores.json\")), data = scores)\n",
@@ -191,19 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-12-15 17:46:32,245: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-12-15 17:46:32,248: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-12-15 17:46:32,251: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-12-15 17:46:32,252: INFO: common: created directory at: artifacts]\n",
-      "[2023-12-15 17:46:32,253: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2023-12-15 17:46:32,733: INFO: common: json file saved at: artifacts\\model_evaluation\\scores.json]\n",
+      "[2024-01-20 13:23:55,114: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-01-20 13:23:55,117: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-01-20 13:23:55,119: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-01-20 13:23:55,121: INFO: common: created directory at: artifacts]\n",
+      "[2024-01-20 13:23:55,122: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2024-01-20 13:23:55,278: INFO: common: json file saved at: artifacts\\model_evaluation\\scores.json]\n",
       "Accuracy 0.7924170616113744\n",
       "Precision 0.600326264274062\n",
       "Recall 0.6559714795008913\n",
@@ -219,11 +220,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Repositories\\ml-churn\\venv\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [17:46:35] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0750514818a16474a-1\\xgboost\\xgboost-ci-windows\\src\\c_api\\c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
+      "d:\\Repositories\\ml-churn\\venv\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [13:23:55] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0750514818a16474a-1\\xgboost\\xgboost-ci-windows\\src\\c_api\\c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "Registered model 'Churn_model' already exists. Creating a new version of this model...\n",
-      "2023/12/15 17:46:43 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Churn_model, version 4\n",
-      "Created version '4' of model 'Churn_model'.\n"
+      "d:\\Repositories\\ml-churn\\venv\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
     }
    ],
@@ -237,6 +237,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
